--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Tyler Suderman",
   "license": "ISC",
   "dependencies": {
+    "dotenv-webpack": "^1.7.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -27,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^4.13.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.5.1",
